k8s/infra/depl/nats-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nats
  # https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#stable-network-id
  serviceName: nats-headless
  template:
    metadata:
      labels:
        app: nats
    spec:
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#more-practical-use-cases
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - nats
                topologyKey: kubernetes.io/hostname
      containers:
        - name: nats
          image: nats:alpine
          args: ["-p", "4222", "-c", "/etc/nats/nats-server.conf"]
          ports:
            - name: nats-client
              containerPort: 4222
            - name: nats-cluster
              containerPort: 6222
          volumeMounts:
            - name: nats-server-configmap
              mountPath: /etc/nats/
            - name: nats-pvc
              mountPath: /data
      volumes:
        - name: nats-server-configmap
          configMap:
            name: nats-server-config-cm
  volumeClaimTemplates:
    - metadata:
        name: nats-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        # Consult your cloud provider with regards to available PVC classes
        # otherwise dynamic provisioning will probably fail
        # storageClassName: do-block-storage
        resources:
          requests:
            storage: 1Gi
---
#
# StatefulSets currently require a Headless Service to be responsible
# for the network identity of the Pods. You are responsible for creating this Service.
#
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#stable-network-id
#
apiVersion: v1
kind: Service
metadata:
  name: nats-headless
spec:
  #
  # $ kubectl -n kube-system get svc kube-dns
  # NAME       TYPE        CLUSTER-IP    EXTERNAL-IP   PORT(S)                  AGE
  # kube-dns   ClusterIP   10.245.0.10   <none>        53/UDP,53/TCP,9153/TCP   4d22h
  # $ kubectl get ep
  # NAME            ENDPOINTS                                                          AGE
  # kubernetes      100.65.58.7:443                                                    4d22h
  # nats-headless   10.244.0.119:4222,10.244.0.195:4222,10.244.1.83:4222 + 3 more...   18m
  # $ kubectl exec -it nats-0 -- /bin/ash
  # # nslookup 10.244.0.119 10.245.0.10
  #
  clusterIP: None
  selector:
    app: nats
  ports:
    - name: nats
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-cluster
      protocol: TCP
      port: 6222
      targetPort: 6222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: nats
  ports:
    - name: http
      protocol: TCP
      port: 4222
      targetPort: 4222
