k8s/infra/depl/traefik-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      #
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#more-practical-use-cases
      #
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - traefik
                topologyKey: kubernetes.io/hostname
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.0.1
          volumeMounts:
            - name: traefik-config
              mountPath: "/etc/traefik"
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
---
#
# As underlined in the documentation for the api.dashboard option,
# the router rule defined for Traefik must match the path prefixes /api and /dashboard.
#
# https://doc.traefik.io/traefik/operations/dashboard/#dashboard-router-rule
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-websecure
spec:
  # https://doc.traefik.io/traefik/v3.0/routing/entrypoints/#asdefault
  entryPoints:
    - websecure
  routes:
    #
    # Depending on the deployment, do not forget to add to /etc/hosts a mapping
    # between the IP of the cloud load balancer and the registered host name
    # or between the localhost IP and the registered host name
    #
    # https://www.padok.fr/en/blog/traefik-kubernetes-certmanager
    #
    # We need the Host in order to prevent this message:
    # No domain found in rule PathPrefix(`/dashboard`) || PathPrefix(`/api`),
    # the TLS options applied for this router will depend on the SNI of each request
    #
    - match: Host(`tma.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-tls-config
  tls:
    secretName: certs-secret
    options:
      name: traefik-tls-options
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tma.com`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-tls-config
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: traefik
  #
  # We want to preserve the TLS connection between each client and the replica that received the first request
  # https://kubernetes.io/docs/reference/networking/virtual-ips/#session-affinity
  #
  # The default timeout for sessionAffinity: ClientIP in Kubernetes is usually set to 3 hours (10800 seconds), but this can be configured.
  # The timeout is controlled by the sessionAffinityConfig.clientIP.timeoutSeconds field in the Service specification.
  # If a client doesn't make any new requests within this timeout period, the affinity entry is discarded. The next request from that client may then be routed to a different pod.
  #
  sessionAffinity: ClientIP
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: traefik
      protocol: TCP
      port: 80
      targetPort: 80
